--- a/packages/package1/package.json
+++ b/packages/package1/package.json
@@ -22,5 +22,8 @@
   },
   "bugs": {
     "url": "https://github.com/marceloimg93/testing-lerna-monorepo/issues"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
